--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^4.2.2",
     "cssnano": "^5.1.15",
+    "glob": "^8.1.0",
     "glob-all": "^3.3.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.2",
